Mostly bug fixes and visual adjustments to make things more readable

--- a/visualization.css
+++ b/visualization.css
@@ -1,5 +1,24 @@
-.links line {
+/*.links line {
 	stroke: #999;
+}*/
+
+.link_degree1 {
+	stroke-opacity: 0.8;
+	stroke: #999;
+}
+
+.link_degree2 {
+	stroke-opacity: 0.3;
+	stroke: #999;
+}
+
+.link_degree3 {
+	stroke-opacity: 0.15;
+	stroke: #999;
+}
+
+.link_highlighted {
+	stroke: #900;
 	stroke-opacity: 0.6;
 }
 
@@ -61,7 +80,8 @@ div.tooltip {
 
 .node-annotation text, .link-annotation text {
 	font-family: sans-serif;
-	text-shadow: 0px 0px 2px white;
+	fill: white;
+/*	text-shadow: 0px 0px 2px white;*/
 }
 
 div.annotate {
@@ -107,14 +127,18 @@ div.annotate {
 
 div[role=dialog] {
 	background-color: white;
-	padding: 10px;
+/*	padding: 10px;*/
 	border:  1px solid #CCC;
 	font-family: sans-serif;
 }
 
 .ui-dialog-titlebar {
 	text-align: center;
-	margin: 5px;
+	padding-top: 15px;
+	padding-left: 15px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	background-color: #96c9f3;
 }
 
 #ui-id-1 {
@@ -126,7 +150,16 @@ div[role=dialog] {
 }
 
 #dialog-form {
+	padding-top: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.ui-dialog-buttonpane {
 	margin: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
 }
 
 form input {
@@ -147,4 +180,16 @@ textarea {
 
 #link {
 	width: 70%;
+}
+
+.annotation-note-bg {
+	fill: rgba(0,0,0,1);
+	fill-opacity: 1;
+	stroke: rgba(0,0,0,1);
+	stroke-width: 6px;
+/*	opacity: 0.75;*/
+}
+
+.annotation-note-content {
+	opacity: 0.75;
 }
